# FbxViz

./: BUILD.md  CMakeLists.txt  LICENSE  README.md  build.py
cmake/: compiler_config.cmake  utils.cmake
cmake/modules/: FindFBX.cmake
sampleData/: mulitpleAnimLayer.fbx  simpleAnim2.fbx
src/: CMakeLists.txt  common.cpp  common.h  curveInfo.cpp  curveInfo.h  main.cpp
src/graph/: CMakeLists.txt  edge.cpp  edge.h  graph.cpp  graph.h  node.cpp  node.h
